--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -14,7 +14,9 @@ body{
 }
 
 .header-bgc{
-	background-color: #f6f6f6;
+	background-color:  rgba(202, 161, 110, 0.1);
+	/* background-color: #f6f6f6; */
+
 }
 
 .header-container{
@@ -60,6 +62,7 @@ body{
 .social-menu a{
 	color: #464646;
 	margin-left: 20px;
+
 }
 
 .logo-container{
@@ -75,8 +78,10 @@ body{
 	text-align: center;
 	color: #464646;
 	transform: translate(-50%, 100%);
-	background-color: rgba(255, 255, 255, 0.6);
-	left: 50%;
+	background-color: rgba(255, 255, 255,0);
+   left: 40%;
+   top: 300px;
+   transform: rotate(-9.2deg);
 }
 
 .title-logo{
@@ -118,7 +123,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: rgba(201, 161, 110 , 0.2);
 	left: 0;
 	top: 0;
 }
