--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -71,7 +71,7 @@ li {
 	font-size: 11px;
 	font-weight: 600;
 	letter-spacing: 1.65px;
-	line-height: 20px;
+	line-height: 2em;
 }
 
 .main-menu li:not(:last-child) {
@@ -227,7 +227,7 @@ li {
 	font-size: 10px;
 	font-weight: 700;
 	letter-spacing: 1.5px;
-	line-height: 14.3px;
+	line-height: 1.3em;
 	color: #b6b6b6;
 }
 
@@ -261,7 +261,7 @@ li {
 	margin: 0;
 	color: #b6b6b6;
 	font-size: 12px;
-	line-height: 17.2px;
+	line-height: 1.2em;
 	margin-bottom: 28px;
 }
 
@@ -283,7 +283,7 @@ li {
 	margin-top: 10px;
 	color: #222222;
 	font-size: 13px;
-	line-height: 28px;
+	line-height: 2em;
 	text-align: left;
 }
 
@@ -306,18 +306,28 @@ li {
 	color: #222222;
 }
 
-.flex-navegation .white-box {
+.flex-navigation .white-box {
 	display: flex;
 	justify-content: space-between;
 	width: 65.5%;
 }
 
-.flex-navegation p:last-child {
+.flex-navigation .navigation-link:last-child {
 	text-align: right;
 }
 
-.flex-navegation a:hover {
+.flex-navigation a:hover {
 	color: #c9a16e;
+}
+
+.navigation-link {
+	padding: 10px 0;
+}
+
+.navigation-link .title {
+	letter-spacing: 0.5px;
+	font-size: 12px;
+	color: #444;
 }
 
 .box-sidebar {
@@ -346,7 +356,7 @@ li {
 
 .bio {
 	padding: 10px 0;
-	line-height: 23.4px;
+	line-height: 2em;
 }
 
 .contact-me {
