--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -478,7 +478,7 @@ input[type='submit' i]:focus {
 		width: 100%;
 	}
 
-	.flex-navegation .white-box {
+	.flex-navigation .white-box {
 		width: 90vw;
 	}
 }
