--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -364,6 +364,7 @@ li {
 .bio {
 	padding: 10px 0;
 	line-height: 2em;
+	text-align: left;
 }
 
 .contact-me {
@@ -472,18 +473,40 @@ input[type='submit' i]:focus {
 
 	.sidebar-content {
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
 	}
 
-	.avatar {
-		height: 120px;
-		margin-bottom: 10px;
-		margin-right: 20px;
+	.bio {
+		text-align: left;
 	}
 
-	.bio {
-		width: 65%;
-		text-align: left;
+	.sidebar-content > p:first-child {
+		border-radius: 50%;
+		width: 50vw;
+		height: 50vw;
+		overflow: hidden;
+		margin: 0 auto;
+		position: relative;
+	}
+
+	.sidebar-content > p:first-child::after {
+		content: '';
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3) inset;
+		border-radius: 50%;
+	}
+
+	.avatar {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		margin: 0;
+		object-position: 50% 20%;
 	}
 
 	.blog-article {
