--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -8,6 +8,7 @@ Author URI:          http://gisehaag.com/
 License:             GNU General Public License v2 or later
 License URI:         http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 */
+@import url('https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap');
 
 body {
 	font-family: 'Lato', sans-serif;
@@ -284,7 +285,7 @@ li {
 	margin: 0;
 	margin-top: 10px;
 	color: #222222;
-	font-size: 13px;
+	font-size: 15px;
 	line-height: 2em;
 	text-align: left;
 }
@@ -362,6 +363,7 @@ li {
 }
 
 .bio {
+	font-size: 15px;
 	padding: 10px 0;
 	line-height: 2em;
 	text-align: left;
@@ -401,7 +403,6 @@ input[type='submit' i] {
 	color: #643907;
 	cursor: pointer;
 	width: 50%;
-	/* margin: 1rem auto; */
 }
 
 input[type='submit' i]:focus {
@@ -424,7 +425,7 @@ input[type='submit' i]:focus {
 	font-size: 12px;
 	color: #464646;
 	text-align: center;
-	padding: 30px 0;
+	padding: 15px 0;
 }
 
 .footer-content a {
@@ -442,6 +443,198 @@ input[type='submit' i]:focus {
 
 .footer-content i img {
 	transform: scaleX(-1);
+}
+
+.page-template-projects {
+	margin: 0;
+	background-color: #000;
+	opacity: 0.9;
+	background-image: radial-gradient(#ff3788 0.8px, transparent 0.8px), radial-gradient(#ff3788 0.8px, #000 0.8px);
+	background-size: 25px 25px;
+	background-position: 0 0, 12px 12px;
+}
+
+.page-template-projects .header-footer-bgc {
+	background-color: #5b5b5b;
+	color: #fff;
+}
+
+.page-template-projects .header-footer-bgc a {
+	font-family: 'Corben', cursive;
+	color: #fff;
+}
+
+.page-template-projects .header-footer-bgc a:hover {
+	color: #ff3788;
+}
+
+.page-template-projects .logo {
+	background-color: #ff3788;
+	text-align: center;
+	padding: 50px 0;
+}
+
+.page-template-projects .logo h1 {
+	margin: 0;
+	font-size: 4em;
+	font-family: 'Corben', cursive;
+	font-weight: 700;
+}
+
+.page-template-projects .logo p {
+	margin: 0;
+	color: white;
+	text-align: center;
+	font-family: 'Corben', cursive;
+	font-weight: 700;
+}
+
+.page-template-projects .projects {
+	column-count: 3;
+	column-gap: 40px;
+	width: 85vw;
+	margin: 0 auto;
+}
+
+.page-template-projects .projects-title {
+	margin-top: 0;
+	font-family: 'Corben', cursive;
+	font-weight: 700;
+	font-size: 2rem;
+	line-height: 4em;
+	text-align: center;
+	background-color: #000;
+	color: #fff;
+	margin-bottom: 50px;
+	border-bottom: 3px solid #fd5298;
+}
+
+.page-template-projects .project-item {
+	background-color: #fd5298;
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	margin-bottom: 40px;
+	overflow: hidden;
+	border: 4px solid #000;
+}
+
+.page-template-projects .project-item a {
+	position: relative;
+	z-index: 1;
+}
+
+.page-template-projects .project-title {
+	margin: 0;
+	font-family: 'Corben', cursive;
+	font-weight: 400;
+	font-size: 0.8rem;
+	line-height: 3em;
+	letter-spacing: 1.5px;
+	padding-left: 20px;
+	position: relative;
+	z-index: 1;
+	text-align: center;
+	background-color: #222;
+	color: #c1c1c1;
+	position: relative;
+	z-index: 1;
+}
+
+.page-template-projects .icon-chevron-down {
+	cursor: pointer;
+	position: absolute;
+	z-index: 2;
+	transform: translate(-10%, 100%);
+	left: 15px;
+	bottom: 25px;
+	color: #c1c1c1;
+	font-size: 0.8rem;
+}
+
+.page-template-projects .footer-content {
+	color: #fff;
+	font-weight: 700;
+	font-family: 'Corben', cursive;
+	font-style: normal;
+}
+
+.page-template-projects .project-img {
+	display: block;
+	width: 100%;
+}
+
+.more-info {
+	background-color: #fff;
+	text-align: left;
+	color: #204969;
+	font-size: 0.8em;
+	position: relative;
+	z-index: 0;
+	max-height: 0;
+	overflow: hidden;
+	transition: all 1s ease;
+}
+
+.more-info .wrapper {
+	border-top: 1px solid #a1dd70;
+	padding: 10px 15px 10px 30px;
+}
+
+.date {
+	display: inline-block;
+	margin: 10px 0 5px;
+	padding: 2px 10px;
+	border-radius: 5px;
+	background-color: rgba(161, 221, 112, 0.5);
+	border: 0.5px solid #a1dd70;
+}
+
+.tech-icon {
+	display: inline-block;
+	border: 0px solid transparent;
+	margin-right: 10px;
+	width: 20px;
+}
+
+.inspiration-link {
+	color: #204969;
+	text-decoration: underline;
+}
+
+.visible {
+	max-height: 400px;
+}
+
+.hidden {
+	display: none;
+}
+
+.icon-chevron-up {
+	cursor: pointer;
+}
+
+.icon-chevron-up:before {
+	content: '\f077';
+}
+
+.tooltip {
+	position: relative;
+}
+
+.tooltip:hover::before {
+	position: absolute;
+	top: -15px;
+	transform: translateX(-30%);
+	content: attr(data-title);
+	background-color: #f9f9f9;
+	padding: 4px;
+	border: 0.5px solid #333;
+	border-radius: 5px;
+	font-size: 10px;
+	color: gray;
+	z-index: 5;
+	white-space: nowrap;
 }
 
 @media screen and (max-width: 768px) {
