--- a/gisehaag/style.css
+++ b/gisehaag/style.css
@@ -407,6 +407,25 @@ li {
 	outline-color: #c9a16e;
 }
 
+.page-template-dark .wpcf7 form {
+	width: 80vh;
+	margin: 0 auto;
+}
+
+.page-template-dark .contact-input {
+	color: #c1c1c1;
+	font-family: 'Livvic', sans-serif;
+	border-bottom: 2px solid #ff3788;
+	background-color: #000;
+	font-size: 1em;
+	font-style: normal;
+}
+
+.page-template-dark .contact-input:focus {
+	outline-width: 0.5px;
+	outline-color: #e5055f;
+}
+
 input[type='submit' i] {
 	text-align: center;
 	font-family: 'Lato', sans-serif;
@@ -422,6 +441,14 @@ input[type='submit' i] {
 
 input[type='submit' i]:focus {
 	outline-color: transparent;
+}
+
+.page-template-dark input[type='submit' i] {
+	font-family: 'Livvic', sans-serif;
+	background-color: #ff3788;
+	color: #fff;
+	font-style: normal;
+	width: 20%;
 }
 
 [class^='wpcf7-not'],
@@ -459,7 +486,7 @@ input[type='submit' i]:focus {
 	transform: scaleX(-1);
 }
 
-.page-template-projects {
+.page-template-dark {
 	margin: 0;
 	background-color: #000;
 	font-family: 'Livvic', sans-serif;
@@ -469,16 +496,16 @@ input[type='submit' i]:focus {
 	background-position: 0 0, 12px 12px;
 }
 
-.page-template-projects .header-footer-bgc {
+.page-template-dark .header-footer-bgc {
 	background-color: #5b5b5b;
 	color: #fff;
 }
 
-.page-template-projects .header-footer-bgc a {
+.page-template-dark .header-footer-bgc a {
 	color: #fff;
 }
 
-.page-template-projects .header-footer-bgc a:hover {
+.page-template-dark .header-footer-bgc a:hover {
 	color: #ff3788;
 }
 
@@ -487,27 +514,27 @@ input[type='submit' i]:focus {
 	padding: 70px 0;
 }
 
-.page-template-projects .logo-wrapper,
-.page-template-projects .projects-title,
-.page-template-projects .projects {
+.page-template-dark .logo-wrapper,
+.page-template-dark .projects-title,
+.page-template-dark .projects {
 	width: 80vw;
 	margin: 0 auto;
 }
 
-.page-template-projects .logo-wrapper h1 {
+.page-template-dark .logo-wrapper h1 {
 	margin: 0;
 	font-size: 4em;
 	font-weight: 900;
 }
 
-.page-template-projects .logo-wrapper p {
+.page-template-dark .logo-wrapper p {
 	margin: 0;
 	color: #fff;
 	font-size: 1.3rem;
 	font-weight: 500;
 }
 
-.page-template-projects .projects {
+.page-template-dark .projects {
 	/* column-count: 3; */
 	/* column-gap: 40px; */
 	display: grid;
@@ -524,12 +551,12 @@ input[type='submit' i]:focus {
 	border-bottom: 3px solid #fd5298;
 }
 
-.page-template-projects .projects-title {
+.page-template-dark .projects-title {
 	width: 80vw;
 	margin: 0 auto;
 }
 
-.page-template-projects .projects-title h1 {
+.page-template-dark .projects-title h1 {
 	margin: 0;
 	font-weight: 700;
 	font-size: 2rem;
@@ -537,7 +564,7 @@ input[type='submit' i]:focus {
 	color: #fff;
 }
 
-.page-template-projects .project-item {
+.page-template-dark .project-item {
 	/* background-color: #fd5298; */
 	display: inline-block;
 	position: relative;
@@ -549,19 +576,18 @@ input[type='submit' i]:focus {
 	flex-direction: column;
 }
 
-.page-template-projects .project-item a {
+.page-template-dark .project-item a {
 	position: relative;
 	z-index: 1;
 	flex-grow: 1;
 }
 
-.page-template-projects .project-title {
+.page-template-dark .project-title {
 	margin: 0;
 	font-weight: 400;
 	font-size: 0.8rem;
 	line-height: 3em;
 	letter-spacing: 1.5px;
-	/* padding-left: 20px; */
 	position: relative;
 	z-index: 1;
 	text-align: center;
@@ -571,23 +597,16 @@ input[type='submit' i]:focus {
 	z-index: 1;
 }
 
-.page-template-projects .icon-chevron-down {
+.page-template-dark .icon-chevron-down {
 	cursor: pointer;
-	/* position: absolute; */
-	/* z-index: 2; */
-	/* transform: translate(-10%, 100%); */
-	/* left: 15px; */
-	/* bottom: 25px; */
-	/* color: #c1c1c1; */
-	/* font-size: 0.8rem; */
 	padding-right: 10px;
 }
 
-.page-template-projects .footer-content {
+.page-template-dark .footer-content {
 	color: #fff;
 }
 
-.page-template-projects .project-img {
+.page-template-dark .project-img {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -599,7 +618,6 @@ input[type='submit' i]:focus {
 	text-align: left;
 	color: #204969;
 	font-size: 0.8em;
-	/* position: relative; */
 	z-index: 0;
 	max-height: 0;
 	overflow: hidden;
@@ -680,13 +698,84 @@ input[type='submit' i]:focus {
 	list-style: disc;
 }
 
-/*
-@media screen and (max-width: 940px) {
-	.page-template-projects .projects {
-		column-count: 2;
-		column-gap: 10px;
-	}
-} */
+.page-template-dark .social .background {
+	background-color: #000;
+	margin-bottom: 50px;
+	border-bottom: 3px solid #fd5298;
+	text-align: center;
+}
+
+.page-template-dark .social ul {
+	padding: 0;
+	margin-top: 0;
+}
+.page-template-dark .social li {
+	display: inline;
+}
+
+.page-template-dark .social a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 600;
+	margin: 0;
+	font-weight: 700;
+	font-size: 1.7rem;
+	line-height: 4em;
+	color: #fff;
+}
+
+.page-template-dark .social span {
+	padding: 15px;
+	line-height: 3em;
+}
+
+.info-about-me > .wp-block-group__inner-container {
+	display: flex;
+	flex-direction: row-reverse;
+	color: #fff;
+	width: 70vw;
+	margin: 0 auto 50px;
+	font-size: 1.1rem;
+}
+
+.wp-block-group__inner-container {
+	width: 90%;
+}
+
+.wp-block-group__inner-container p {
+	margin: 0;
+	margin-bottom: 1.2rem;
+	line-height: 1.2rem;
+}
+
+.wp-block-group__inner-container p:last-child {
+	margin-bottom: 0;
+}
+
+.info-about-me > .wp-block-group__inner-container figure {
+	margin: 0;
+	margin-right: 20px;
+	width: 30%;
+}
+
+.info-about-me > .wp-block-group__inner-container img {
+	border-radius: 2px;
+	width: 100%;
+	padding: 12px;
+	border-radius: 5px;
+	border: 2px solid #fd5298;
+	background-color: #111;
+}
+
+.wp-block-image figcaption {
+	margin-top: 2px;
+	text-align: center;
+}
+
+.info-about-me > .wp-block-group__inner-container .wp-block-group {
+	width: 80%;
+}
 
 @media screen and (max-width: 768px) {
 	.box-width {
@@ -790,22 +879,57 @@ input[type='submit' i]:focus {
 		display: none;
 	}
 
-	.page-template-projects .projects-title h1 {
+	.page-template-dark .projects-title h1 {
 		padding: 25px 0;
 		line-height: 1em;
 	}
 
-	.page-template-projects .projects {
+	.page-template-dark .projects {
 		display: flex;
 		flex-direction: column;
 		width: 90vw;
 		margin: 0 auto;
 	}
 
-	.page-template-projects .project-item {
+	.page-template-dark .project-item {
 		width: 80vw;
 		margin: 0 auto 20px;
 	}
+
+	.page-template-dark .social a {
+		font-size: 1.3rem;
+		margin-right: 10px;
+	}
+
+	.page-template-dark .social span {
+		padding: 5px;
+	}
+
+	.page-template-dark .wpcf7 form {
+		width: 100%;
+	}
+
+	.page-template-dark input[type='submit' i] {
+		width: 100px;
+	}
+
+	.info-about-me > .wp-block-group__inner-container {
+		flex-direction: column-reverse;
+		width: 90vw;
+		margin: 0 10% 30px;
+	}
+
+	.info-about-me > .wp-block-group__inner-container .wp-block-group {
+		width: 95vw;
+	}
+
+	.info-about-me > .wp-block-group__inner-container figure {
+		width: 40vw;
+		margin: 0 auto;
+	}
+
+	.info-about-me > .wp-block-group__inner-container img {
+		padding: 5px;
 }
 
 @media screen and (max-width: 400px) {
